appy.gen: bugfix while using Zope behind Apache and using the VHM; Ref.view macro is not called via Ajax anymore for single-valued Refs (when displaying lists containing single-valued Ref fields, it produces too many ajax requests, leading to ConflictErrors in the ZODB).

--- a/gen/ui/appy.css
+++ b/gen/ui/appy.css
@@ -59,8 +59,8 @@ img {border: 0}
 .portletSep { border-top: 1px solid #5F7983; margin-top: 2px;}
 .portletPage { font-style: italic; }
 .portletGroup { font-variant: small-caps; font-weight: bold; font-style: normal;
-                margin: 0.4em 0 0.2em 0; }
-.phase { border-style: dashed; border-width: thin; padding: 0 0.6em 5px 1em;}
+                margin: 0 0 0.2em 0; }
+.phase { border-style: dashed; border-width: thin; padding: 4px 0.6em 5px 1em;}
 .phaseSelected { background-color: #F4F5F6; }
 .content { padding: 14px 14px 9px 15px;}
 .grey { display: none; position: absolute; left: 0px; top: 0px;
